--- a/css/album.css
+++ b/css/album.css
@@ -35,15 +35,25 @@
 
 @media only screen and (max-width: 768px) {
     #slider {
-        height: 200px;
+        height: 400px;
         max-width: 500px;
     }
 }
 
-#slider figure img {
+#slider figure .imgWrapper {
     float: left;
     width: 16.6%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(rgba(255, 255, 255, 7), rgba(255, 255, 255, 0.5));
+    backdrop-filter: blur(12px);
+}
+
+.imgWrapper img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #slider figure {
@@ -79,8 +89,51 @@
     display: none;
 }
 
-video {
+#video-and-contact-wrapper {
+    display: flex;
+}
+
+#contact-us-form-wrapper-pc {
+    margin-left: 20px;
     margin-top: 20px;
+}
+
+
+
+@media only screen and (min-width: 769px) {
+    video {
+        width: 272px;
+        border-radius: 15px;
+        height: 500px;
+        border-left: 3px solid black;
+        border-right: 3px solid black;
+        border-top: 15px solid black;
+        border-bottom: 15px solid black;
+        background-color: black;
+    }
+
+    #contact-us-form-wrapper-mobile {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #contact-us-form-wrapper-pc {
+        display: none;
+    }
+
+    video {
+        max-width: 272px;
+        border-radius: 15px;
+        height: 450px;
+        border-left: 3px solid black;
+        border-right: 3px solid black;
+        border-top: 15px solid black;
+        border-bottom: 15px solid black;
+        background-color: black;
+        margin-top: 20px;
+        max-height: 600px;
+    }
 }
 
 @media only screen and (max-width: 400px) {
